 Fix: Fixed players being unable to join the server if access restrictions prevent them from joining the rank-specific main world.
 Fix: /WRemove now correctly handles removing rank-main worlds.
 Fix: Fixed a case where newlines in PlayerInfo or IPBanInfo fields would cause record corruption.
 Fix: Fixed reversed messages in /DoNotMark (thanks Hellenion).
 Change: Sped up "cloudy" brush when working with large draw commands.
 Change: Crash reporter now submits list of names and versions of all loaded assemblies, to help identify mismatched or missing dependencies.
 Change: Added logging to every confirmation prompt, "/ok", BlockDB enabling/disabling/clearing, /ZRemove, /InfoSwap, and /Env.
 Change: Any pending confirmations are now reset on world change.
 Change: Added /I as an alias for /Info, and /CS as an alias for /CopySlot.
 Change: Removed "marbled" brush ("cloudy" works just as well) and FCMv4 map format support (development canceled).
 Change: /Where command now only requires ViewOthersInfo permission to see other players' whereabouts. It can be used by anyone on self.
 API: Many more documentation improvements.

0.631
 Feature: Added a way to restrict commands to match online players' names only, by prefixing the name with an exclaimation mark (!).
 Feature: Added /DoNotMark command. When toggled on, clicking on blocks does not cause marks to be added to a selection.
 Fix: Included MapConverter.exe and MapRenderer.exe in list of protected filenames.
 Fix: Fixed a potential crash in Paths.FileExists when working in case-sensitive mode in a root directory.
 Fix: Fixed ConfigGUI not loading permission limits properly (thanks recon_).
 Fix: Added missing fake connection message when using non-silent /Unhide (thanks Wundsalz).
 Change: Improvements to fCraft's built-in crash reporter.
 Change: Blocks redone with /Redo are now flagged as "Redone" in /BlockInfo (instead of "UndoneSelf"), painted blocks as "Painted" (instead of "Manual, Replaced").