@@ -15,6 +15,7 @@
  Fix: /WRemove now correctly handles removing rank-main worlds.
  Fix: Fixed a case where newlines in PlayerInfo or IPBanInfo fields would cause record corruption.
  Fix: Fixed reversed messages in /DoNotMark (thanks Hellenion).
+ Fix: Fixed ServerCLI sometimes staying open, waiting on console input, when it's supposed to shut down or restart.
  Change: Sped up "cloudy" brush when working with large draw commands.
  Change: Crash reporter now submits list of names and versions of all loaded assemblies, to help identify mismatched or missing dependencies.
  Change: Added logging to every confirmation prompt, "/ok", BlockDB enabling/disabling/clearing, /ZRemove, /InfoSwap, and /Env.
